Fixed the Asset Path Mismatch

--- a/app/views/partials/wickeditor/_fabricjs-canvas.html.erb
+++ b/app/views/partials/wickeditor/_fabricjs-canvas.html.erb
@@ -1,12 +1,12 @@
 <%= stylesheet_link_tag 'wickeditor/basic-toolbox.css' %>
 
 <%= javascript_include_tag 'wickeditor/fabric.min.js' %>
-<%= javascript_include_tag 'wickeditor/paper-toolbox.js' %>
-<%= javascript_include_tag 'wickeditor/Cursor.js' %>
-<%= javascript_include_tag 'wickeditor/Pencil.js' %>
-<%= javascript_include_tag 'wickeditor/Shapes.js' %>
-<%= javascript_include_tag 'wickeditor/Text.js' %>
-<%= javascript_include_tag 'wickeditor/app.js' %>
+<%= javascript_include_tag 'wickeditor/lib/paper-toolbox.js' %>
+<%= javascript_include_tag 'wickeditor/tools/Cursor.js' %>
+<%= javascript_include_tag 'wickeditor/tools/Pencil.js' %>
+<%= javascript_include_tag 'wickeditor/tools/Shapes.js' %>
+<%= javascript_include_tag 'wickeditor/tools/Text.js' %>
+<%= javascript_include_tag 'wickeditor/App.js' %>
 
 <script>
   window.onload = function () {
