--- a/app/views/partials/wickeditor/_fabricjs-canvas.html.erb
+++ b/app/views/partials/wickeditor/_fabricjs-canvas.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'wickeditor/basic-toolbox.css' %>
 
-<%= javascript_include_tag 'wickeditor/fabric.min.js' %>
+<%= javascript_include_tag 'wickeditor/lib/fabric.min.js' %>
 <%= javascript_include_tag 'wickeditor/lib/paper-toolbox.js' %>
 <%= javascript_include_tag 'wickeditor/tools/Cursor.js' %>
 <%= javascript_include_tag 'wickeditor/tools/Pencil.js' %>
