Added Most Recent Wick Code

--- a/app/assets/stylesheets/wickeditor/basic-toolbox.css
+++ b/app/assets/stylesheets/wickeditor/basic-toolbox.css
@@ -26,3 +26,12 @@
 .papertoolbox_tool-icon-active {
 	background-color: yellow;
 }
+
+.papertoolbox_popup {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100px;
+	height: 100px;
+	background-color: blue;
+}
