--- a/app/views/partials/wickeditor/_fabricjs-canvas.html.erb
+++ b/app/views/partials/wickeditor/_fabricjs-canvas.html.erb
@@ -1,11 +1,15 @@
 <%= stylesheet_link_tag 'wickeditor/basic-toolbox.css' %>
 
+<%= javascript_include_tag 'wickeditor/lib/polyfills.js' %>
 <%= javascript_include_tag 'wickeditor/lib/fabric.min.js' %>
 <%= javascript_include_tag 'wickeditor/lib/paper-toolbox.js' %>
 <%= javascript_include_tag 'wickeditor/tools/Cursor.js' %>
 <%= javascript_include_tag 'wickeditor/tools/Pencil.js' %>
 <%= javascript_include_tag 'wickeditor/tools/Shapes.js' %>
 <%= javascript_include_tag 'wickeditor/tools/Text.js' %>
+<%= javascript_include_tag 'wickeditor/tools/Pan.js' %>
+<%= javascript_include_tag 'wickeditor/tools/Zoom.js' %>
+<%= javascript_include_tag 'wickeditor/tools/Comment.js' %>
 <%= javascript_include_tag 'wickeditor/App.js' %>
 
 <script>
